# aoc2023

./: .gitignore  Cargo.toml
benches/: days.rs
day1/src/: main.rs
day2/src/: main.rs
day4/src/: main.rs
day5/: test.txt
day5/src/: main.rs
rust/: Cargo.toml
rust/benches/: days.rs
rust/inputs/: day3_test.txt
rust/src/: day1.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  main.rs  template.rs
zig/src/: day1.zig  day6.zig  day7.zig  day8.zig  day9.zig  main.zig
