[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divan = "0.1.5"
eyre = "0.6.10"

[[bin]]
name = "aoc_debugger"
path = "src/main.rs"

[lib]
name = "aoc"
path = "src/lib.rs"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[[bench]]
name = "days"
harness = false
